--- a/Data_Audit/bio.bib
+++ b/Data_Audit/bio.bib
@@ -17,4 +17,98 @@
 	title = {Inside Airbnb},
 	twitter:creator = {@Murray},
 	url = {http://insideairbnb.com},
-	year = {n.d.}}
+	year = {n.d.}
+}
+
+@article{cox2016airbnb,
+  title={How Airbnb’s data hid the facts in New York City},
+  author={Cox, Murray and Slee, Tom},
+  journal={Inside Airbnb},
+  year={2016}
+}
+
+@article{gurran2017tourists,
+  title={When tourists move in: how should urban planners respond to Airbnb?},
+  author={Gurran, Nicole and Phibbs, Peter},
+  journal={Journal of the American planning association},
+  volume={83},
+  number={1},
+  pages={80--92},
+  year={2017},
+  publisher={Taylor \& Francis}
+}
+
+@article{crawford2015limits,
+  title={The limits of crisis data: analytical and ethical challenges of using social and mobile data to understand disasters},
+  author={Crawford, Kate and Finn, Megan},
+  journal={GeoJournal},
+  volume={80},
+  number={4},
+  pages={491--502},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{stringam2021legal,
+  title={Legal and Ethical Issues of Collecting and Using Online Hospitality Data},
+  author={Stringam, Betsy and Gerdes, John H and Anderson, Chris K},
+  journal={Cornell Hospitality Quarterly},
+  pages={19389655211040434},
+  year={2021},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{kitchin2016ethics,
+  title={The ethics of smart cities and urban science},
+  author={Kitchin, Rob},
+  journal={Philosophical transactions of the royal society A: Mathematical, physical and engineering sciences},
+  volume={374},
+  number={2083},
+  pages={20160115},
+  year={2016},
+  publisher={The Royal Society}
+}
+
+@article{wachsmuth2018airbnb,
+  title={Airbnb and the rent gap: Gentrification through the sharing economy},
+  author={Wachsmuth, David and Weisler, Alexander},
+  journal={Environment and Planning A: Economy and Space},
+  volume={50},
+  number={6},
+  pages={1147--1170},
+  year={2018},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+ 
+@Article{Harris2018,
+  author   = {Harris, John},
+  journal  = {The Guardian},
+  title    = {Profiteers make a killing on {Airbnb} – and erode communities},
+  year     = {2018},
+  issn     = {0261-3077},
+  month    = feb,
+  abstract = {Short-let profiteers are making a killing from Airbnb – and eroding communities. Regulation is long overdue, writes Guardian columnist John Harris},
+  chapter  = {Opinion},
+  keywords = {Airbnb, Sharing economy, Technology, Housing, Communities, Society, UK news},
+  language = {en-GB},
+  url      = {https://www.theguardian.com/commentisfree/2018/feb/12/profiteers-killing-airbnb-erode-communities},
+  urldate  = {2022-11-21},
+}
+
+@Misc{insideairbnb_2022, 
+  title={About Inside Airbnb}, 
+  url={http://insideairbnb.com/about/}, 
+  journal={insideairbnb.com}, 
+  year={2022}, 
+  month={Sep} 
+} 
+
+@article{alsudais2021incorrect,
+  title={Incorrect data in the widely used Inside Airbnb dataset},
+  author={Alsudais, Abdulkareem},
+  journal={Decision Support Systems},
+  volume={141},
+  pages={113453},
+  year={2021},
+  publisher={Elsevier}
+}
